data-studio/components/product-gui/tumblebug-web-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tumblebug-web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tumblebug-web-app
  template:
    metadata:
      labels:
        app: tumblebug-web-app
    spec:
      containers:
      - name: tumblebug-ui
        # https://gitlab.com/cathay-lab-ui-team/product-gui/-/tags/tb-ds-intg-user-repo
        # fixes multi-user git repo resolution issue.
        image: 404906229455.dkr.ecr.ap-northeast-1.amazonaws.com/product-gui-tumblebug:0d7f381
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 2
          periodSeconds: 10
      serviceAccountName: data-studio-ui-runner
