data-studio/components/product-gui/tumblebug-web-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tumblebug-web-app-service
spec:
  ports:
  - name: http-tumblebug-ui
    port: 80
    targetPort: 8080
  selector:
    app: tumblebug-web-app
  type: ClusterIP
